--- a/header/src/components/Header.css
+++ b/header/src/components/Header.css
@@ -76,6 +76,10 @@
     border-radius: 0px 4px 4px 0px;
 }
 
+.header_searchIcon:hover {
+    cursor: pointer;
+}
+
 .header_optionLineOne {
     font-size: 10px;
 }
